# AutoCompleteApp

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
data/: Dictionary.txt
qml/: ui.qml
src/: backend.cpp  backend.h  file_io.cpp  file_io.h  frequency_map.cpp  frequency_map.h  input_handler.cpp  input_handler.h  main.cpp  new_word_tracker.cpp  new_word_tracker.h  trie.cpp  trie.h  ui.cpp  ui.h
